--- a/app/design/frontend/pc/default/template/page/home/review.phtml
+++ b/app/design/frontend/pc/default/template/page/home/review.phtml
@@ -34,7 +34,7 @@
                                                                 ->setStoreId(Mage::app()->getStore()->getId())
                                                                 ->load($review->getEntityPkValue())
                                                                 ->getProductUrl();
-                                                                    ?>#review-form">
+                                                                    ?>#review">
             <?php if(  $review->getReviewimage1()  ):?>
                 <span style="background-image:url(<?php echo Mage::getBaseUrl("media").'reviewimages/'.$review->getReviewimage1();?>);"></span>
             <?php elseif(  $review->getReviewimage2()  ): ?>
