--- a/app/design/frontend/pc/default/template/review/form.phtml
+++ b/app/design/frontend/pc/default/template/review/form.phtml
@@ -1,4 +1,4 @@
-<a name="review-form" id="review-form"></a>
+<a name="review" id="review"></a>
 <script type="text/javascript">
     //<![CDATA[
     jQuery(function($){
