--- a/app/design/frontend/pc/default/template/review/list.phtml
+++ b/app/design/frontend/pc/default/template/review/list.phtml
@@ -97,7 +97,7 @@
     <script>
         function toproduct(product_url){
             jQuery('.review_detail_model').html('');
-            window.location.href = product_url+"#review-form"; 
+            window.location.href = product_url+"#review";
         }
         jQuery(document).ready(function($){
 
