--- a/app/design/frontend/pc/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/pc/default/template/review/product/view/list.phtml
@@ -138,7 +138,7 @@
 
             $(".review_detail_model").on('click','.btn_to_review input',function(){
                 $('.review_detail_model').html('');
-                location.hash="#review-form"; 
+                location.hash="#review";
             });
 
         });
