--- a/app/design/frontend/pc/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view.phtml
@@ -29,7 +29,7 @@
 
                 <div class="commont">
                     <?php echo $this->getReviewsSummaryHtml($_product, false, true)?>
-                    <div class="ask-a-question"> <a href="#askaquestion">Ask a question</a></div>
+                    <div class="ask-a-question"> |&nbsp; <a href="#askaquestion">Ask a question</a></div>
                 </div>
 
                 <div class="product_price">
