--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -45,6 +45,9 @@
                 width: 100%;
                 line-height: 30px;
                 margin-top: 10px;
+                a{
+                    text-decoration: underline;
+                }
 
                 .ratings,.no-rating{
                     float: left;
@@ -60,12 +63,9 @@
                 }
                 .ask-a-question{
                     float: left;
-
+                    margin-left: 8px;
                     a{
-                        font-family: cursive , Arial, Helvetica, sans-serif;
-                        font-size: 17px;
-                        font-weight: bold;
-                        margin-left: 30px;
+
                     }
                 }
             }
