--- a/skin/frontend/pc/default/scss/_home.scss
+++ b/skin/frontend/pc/default/scss/_home.scss
@@ -507,8 +507,7 @@
 
 .home_category_banners{
     width: 100%;
-    height:570px;
-    overflow: hidden;
+    @include float_clear;
 
     .item{
         width:100%;
@@ -516,6 +515,14 @@
             width:100%;
             height:100%;
         }
+    }
+    &>.item{
+      width:19.2%;
+      float:left;
+      margin-right:1%;
+      &:nth-child(5n){
+        margin-right:0;
+      }
     }
 
 }
