branner hot category

--- a/skin/frontend/pc/default/scss/_home.scss
+++ b/skin/frontend/pc/default/scss/_home.scss
@@ -519,6 +519,7 @@
     &>.item{
       width:19.2%;
       float:left;
+      margin-bottom:10px;
       margin-right:1%;
       &:nth-child(5n){
         margin-right:0;
