--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2628,7 +2628,7 @@ tr.summary-details-excluded { font-style: italic; }
 .home_category_banners:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 .home_category_banners .item { width: 100%; }
 .home_category_banners .item img { width: 100%; height: 100%; }
-.home_category_banners > .item { width: 19.2%; float: left; margin-right: 1%; }
+.home_category_banners > .item { width: 19.2%; float: left; margin-bottom: 10px; margin-right: 1%; }
 .home_category_banners > .item:nth-child(5n) { margin-right: 0; }
 
 .review_btn { text-align: center; display: block; height: 100px; line-height: 100px; width: 100%; }
