--- a/app/design/frontend/pc/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view.phtml
@@ -149,7 +149,7 @@
         <?php //echo $this->getChildHtml('upsell_products') ?>
         <?php //echo $this->getChildHtml('product_additional_data') ?>
 
-
+        <?php /*
         <div class="dectits"><span>Size Chart</span></div>
         <div class="box-collateral box-size">
             <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('size_chart')->toHtml() ?>
@@ -159,7 +159,7 @@
         <div class="box-collateral box-measurement">
             <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('measurement_guide')->toHtml() ?>
         </div>
-
+        */?>
     </div>
 
 </div>
