--- a/app/design/frontend/pc/default/template/page/html/header.phtml
+++ b/app/design/frontend/pc/default/template/page/html/header.phtml
@@ -41,7 +41,28 @@
                 &nbsp;&nbsp;|&nbsp;&nbsp;
                 <a href="<?php echo $this->getUrl('help')?>">Help</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp;
-                <a href="<?php echo $this->getUrl('customer_service')?>">Customer Service</a>
+                <a class="CustomerService_a" href="<?php echo $this->getUrl('customer_service')?>">Customer Service</a>
+                <div class="CustomerService">
+                    <div class="and"></div>
+                    <p>
+                        <span></span>
+                        <a href="mailto:<?php echo Mage::getStoreConfig('trans_email/ident_general/email');?>">
+                            Email: <?php echo Mage::getStoreConfig('trans_email/ident_general/email');?>
+                        </a>
+                    </p>
+                    <script>
+                        jQuery(document).ready(function($){
+                            $(".CustomerService_a , .CustomerService").hover(
+                                function(){
+                                    $(".CustomerService").show();
+                                },
+                                function(){
+                                    $(".CustomerService").hide();
+                                }
+                            );
+                        });
+                    </script>
+                </div>
             </div>
         </div>
         <div class="header_content">
