--- a/skin/frontend/pc/default/scss/_header.scss
+++ b/skin/frontend/pc/default/scss/_header.scss
@@ -1,215 +1,255 @@
 .new_header{
-    width:100%;
-    max-width: $style_width; 
+  width:100%;
+  max-width: $style_width;
 
-    .header_top{
+  .header_top{
+    height:$top_height;
+    line-height:$top_height;
+
+    p{
+      margin:0;
+    }
+
+    .top_currency{
+      width:20%;
+      text-align: left;
+      position: relative;
+      float:left;
+      color:#fff;
+
+      .currency_list{
+        width:50px;
+        text-align: center;
+        position: absolute;
+        top:$top_height;
+        left: 40px;
+        border-left:1px solid #ccc;
+        border-right:1px solid #ccc;
+        border-bottom:1px solid #ccc;
+        background:#fff;
+        display: none;
+        z-index:1000;
+      }
+
+      &:hover {
+        .currency_list{
+          display: block;
+
+          a{
+            color:#4c4c4c;
+            display:block;
+            line-height:25px;
+
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+    }
+
+    .welcome_message{
+      width:40%;
+      float:left;
+
+      #demo{
+        overflow:hidden;
         height:$top_height;
-        line-height:$top_height;
-
-        p{
-            margin:0;
-        }
-
-        .top_currency{
-            width:20%;
-            text-align: left;
-            position: relative;
-            float:left;
-            color:#fff;
-
-            .currency_list{
-                width:50px;
-                text-align: center;
-                position: absolute;
-                top:$top_height;
-                left: 40px;
-                border-left:1px solid #ccc;
-                border-right:1px solid #ccc;
-                border-bottom:1px solid #ccc;
-                background:#fff;
-                display: none;
-                z-index:1000;
-            }
-
-            &:hover {
-                .currency_list{
-                  display: block;
-
-                  a{
-                    color:#4c4c4c;
-                    display:block;
-                    line-height:25px;
-
-                    &:hover{
-                      text-decoration: underline;
-                    }
-                  }
-                }
-            }
-        }
-
-        .welcome_message{
-            width:40%;
-            float:left;
-
-            #demo{
-              overflow:hidden;
-              height:$top_height;
-              text-align:center;
-            }
-        }
-        .top_nav{
-            width:40%;
-            float:left;
-            text-align: right;
-            color:#fff;
-            a{
-                color:#fff;
-            }
-        }
+        text-align:center;
+      }
     }
-    .header_content{
-        height:$header_content_height;
-        text-align: left;
-
-        .header_search{
-            float: left;
-            height:$header_content_height;
-            width:33.33%;
-
-            input{
-                background:url(../images/commont/icon_search.png) no-repeat;
-                background-position: 0px 5px;
-                width: 165px;
-                height: 32px;
-                line-height: 32px;
-                outline: none;
-                font-size: 12px;
-                color: #888;
-                text-indent: 25px;
-                border:0;
-                border-bottom: 2px solid #e2e2e2;
-                margin:50px 0 0 65px;
-                padding:0;
-
-                &:focus{
-                  background-position:0px -23px;
-                  border-bottom: 2px solid #4d5152;
-                }
-            }
+    .top_nav{
+      width:40%;
+      float:left;
+      text-align: right;
+      color:#fff;
+      position: relative;
+      a{
+        color:#fff;
+      }
+      .CustomerService_a{
+        display:inline-block;
+      }
+      .CustomerService{
+        display:none;
+        position: absolute;
+        right:0;
+        top:41px;
+        min-width:200px;
+        border:1px solid #c7c7c7;
+        padding: 5px 10px;
+        color:#666;
+        background:#fff;
+        .and{
+          position: absolute;
+          top: -9px;
+          right:0;
+          width:100px;height: 8px;
+          background:url(../images/commont/cus_sanjiao.png) no-repeat center center;
         }
-        .header_logo{
-            float: left;
-            height:$header_content_height;
-            width:33.33%;
-
-            strong{
-                display: inline-block;
-                width: 0;
-                height:0;
-                font-size: 0px;
-            }
-
-            a{
-                display: block;
-                text-align: center;
-                height:100%;
-
-                img{
-                    max-height:100%;
-                }
-            }
+        span{
+          display:inline-block;
+          width:16px;
+          height:10px;
+          background-image:url(../images/commont/email.png);
+          background-position:center center;
+          background-repeat:no-repeat;
         }
-        .header_cart{
-            float: left;
-            height:$header_content_height;
-            width:33.33%;
-            padding:55px 0 0 15%;
-
-            a{
-                display: inline-block;
-                em{
-                    text-indent: -9999px;
-                    display:inline-block;
-                }
-            }
-            .favor{
-                background:url(../images/commont/favor.png) no-repeat;
-                width: 23px;
-                height: 22px;
-                margin-right:30px;
-            }
-
-            .bag{
-                line-height: 32px;
-                color:#000;
-                em{
-                  background:url(../images/commont/bag.png) no-repeat;
-                  width:32px;
-                  height:32px;
-                }
-                .count{
-                  color:#de2489;
-                }
-            }
-
-
+        a{
+          color:#f39;
         }
+      }
+    }
+  }
+  .header_content{
+    height:$header_content_height;
+    text-align: left;
+
+    .header_search{
+      float: left;
+      height:$header_content_height;
+      width:33.33%;
+
+      input{
+        background:url(../images/commont/icon_search.png) no-repeat;
+        background-position: 0px 5px;
+        width: 165px;
+        height: 32px;
+        line-height: 32px;
+        outline: none;
+        font-size: 12px;
+        color: #888;
+        text-indent: 25px;
+        border:0;
+        border-bottom: 2px solid #e2e2e2;
+        margin:50px 0 0 65px;
+        padding:0;
+
+        &:focus{
+          background-position:0px -23px;
+          border-bottom: 2px solid #4d5152;
+        }
+      }
+    }
+    .header_logo{
+      float: left;
+      height:$header_content_height;
+      width:33.33%;
+
+      strong{
+        display: inline-block;
+        width: 0;
+        height:0;
+        font-size: 0px;
+      }
+
+      a{
+        display: block;
+        text-align: center;
+        height:100%;
+
+        img{
+          max-height:100%;
+        }
+      }
+    }
+    .header_cart{
+      float: left;
+      height:$header_content_height;
+      width:33.33%;
+      padding:55px 0 0 15%;
+
+      a{
+        display: inline-block;
+        em{
+          text-indent: -9999px;
+          display:inline-block;
+        }
+      }
+      .favor{
+        background:url(../images/commont/favor.png) no-repeat;
+        width: 23px;
+        height: 22px;
+        margin-right:30px;
+      }
+
+      .bag{
+        line-height: 32px;
+        color:#000;
+        em{
+          background:url(../images/commont/bag.png) no-repeat;
+          width:32px;
+          height:32px;
+        }
+        .count{
+          color:#de2489;
+        }
+      }
+
 
     }
-    .header_menu{
-        width:100%;
-        border-bottom: 1px solid #eee;
-        @include float_clear;
-        ul{
-            display: block;
-            li{
-                float: left;
-                position: relative;
-                height:43px;
-                line-height: 43px;
-                border-bottom:2px solid #fff;
-                &:first-child{
-                    
-                }
-                &:not(:first-child){
-                    background-image:url(../images/commont/menu_li_bg.png) ;
-                    background-repeat: no-repeat;
-                    background-position: 0px 20px;
-                    padding:0 10px;
 
-                    &:hover{
-                        background-image:url(../images/commont/menu_li_hover_bg.png);
-                        border-bottom:2px solid #f39;
-                    }
-                }
+  }
+  .header_menu{
+    width:100%;
+    border-bottom: 1px solid #eee;
+    @include float_clear;
+    ul{
+      display: block;
+      li{
+        float: left;
+        position: relative;
+        height:43px;
+        line-height: 43px;
+        border-bottom:2px solid #fff;
 
-                .level2{
-                    position: absolute;
-                    border: 1px solid #eee;
-                    border-top-color: #f39;
-                    background: white;
-                    z-index: 1000000005;
-                    display: none;
-                    padding:10px;
-                    left:0;
-                    min-width: 300px;
-                    min-height: 100px;
-                }
-            }
-            .home{
-                background:url(../images/commont/menu_home.png) no-repeat;
-                background-position: 0px 14px;
-                a{
-                    text-indent: -9999px;
-                    display:inline-block;
-                    width:20px;
-                }
-            }
-            a{
-                color:#4c5253;
-                text-transform: capitalize;
-            }
+        &>a{
+          font-size:13px;
         }
+        &:hover{
+          &>a{
+            color:#f39;
+          }
+        }
+
+        &:not(:first-child){
+          background-image:url(../images/commont/menu_li_bg.png) ;
+          background-repeat: no-repeat;
+          background-position: 0px 20px;
+          padding:0 10px;
+
+          &:hover{
+            background-image:url(../images/commont/menu_li_hover_bg.png);
+            border-bottom:2px solid #f39;
+          }
+        }
+
+        .level2{
+          position: absolute;
+          border: 1px solid #eee;
+          border-top-color: #f39;
+          background: white;
+          z-index: 1000000005;
+          display: none;
+          padding:10px;
+          left:0;
+          min-width: 300px;
+          min-height: 100px;
+        }
+      }
+      .home{
+        background:url(../images/commont/menu_home.png) no-repeat;
+        background-position: 0px 14px;
+        a{
+          text-indent: -9999px;
+          display:inline-block;
+          width:20px;
+        }
+      }
+      a{
+        color:#4c5253;
+        text-transform: capitalize;
+      }
     }
+  }
 }
