--- a/skin/frontend/pc/default/scss/_cms.scss
+++ b/skin/frontend/pc/default/scss/_cms.scss
@@ -460,7 +460,7 @@ img{vertical-align: middle}
 .cdl dt, .cdl dd { float: left;}
 .cdl dt img { border: 1px solid #DDDDDD; display: block; height: 157px; padding: 10px; width: 157px;}
 #Satin_chiffon div, #Composite_Silk div, #Dchiffion div,#satin div, #chiffon div, #taffeta div, #organza div, #matte_satin div, #elastic_woven_satin div, #silk_like_satin div {background: none repeat scroll 0 0 #FFFFFF; cursor: pointer;  height: 36px;position: absolute; width: 36px;}
-#Satin_chiffon, #Composite_Silk, #Dchiffion,#satin, #chiffon, #taffeta, #organza, #matte_satin, #elastic_woven_satin, #silk_like_satin {position: relative; margin:0;}
+#Satin_chiffon, #Composite_Silk, #Dchiffion,#satin, #chiffon, #taffeta, #organza, #matte_satin, #elastic_woven_satin, #silk_like_satin {position: relative; margin:0;padding:0;}
 .mainbox h3{font-size:12px;background:url(http://s.Beformal.com.au/images/dehua.png) no-repeat 0 center;padding-left:12px;font-weight:bold;font-family:Verdana, Geneva, sans-serif;clear:both;margin-bottom:10px}
 .meatab .co_main{width:465px;float:left;margin-right:25px; margin-bottom:20px;}
 .co_main{position:relative;height:450px;background:url(http://s.Beformal.com.au/images/weddngoc.jpg) no-repeat -10px 0;}
