--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -3864,7 +3864,7 @@ img { vertical-align: middle; }
 
 #Satin_chiffon div, #Composite_Silk div, #Dchiffion div, #satin div, #chiffon div, #taffeta div, #organza div, #matte_satin div, #elastic_woven_satin div, #silk_like_satin div { background: none repeat scroll 0 0 #FFFFFF; cursor: pointer; height: 36px; position: absolute; width: 36px; }
 
-#Satin_chiffon, #Composite_Silk, #Dchiffion, #satin, #chiffon, #taffeta, #organza, #matte_satin, #elastic_woven_satin, #silk_like_satin { position: relative; margin: 0; }
+#Satin_chiffon, #Composite_Silk, #Dchiffion, #satin, #chiffon, #taffeta, #organza, #matte_satin, #elastic_woven_satin, #silk_like_satin { position: relative; margin: 0; padding: 0; }
 
 .mainbox h3 { font-size: 12px; background: url(http://s.Beformal.com.au/images/dehua.png) no-repeat 0 center; padding-left: 12px; font-weight: bold; font-family: Verdana, Geneva, sans-serif; clear: both; margin-bottom: 10px; }
 
