--- a/skin/frontend/pc/default/scss/_product.scss
+++ b/skin/frontend/pc/default/scss/_product.scss
@@ -1,7 +1,8 @@
-.estorm-zoom { width:405px; float:left; clear:both; background:#ffffff; }
+.estorm-zoom { width:485px; float:left; clear:both; background:#ffffff; }
 
-.estorm-zoom-stage { width:300px; height:400px;float:right; position:relative; cursor:all-scroll; }
+.estorm-zoom-stage { width:375px; height:500px;float:right; position:relative; cursor:all-scroll; }
 
+.estorm-zoom-stage .m_image{width:375px;height:500px;}
 .estorm-zoom .arrow { width:100%; height:10px; display:block; text-indent:-9999px; overflow:hidden; position:absolute;  background-repeat:no-repeat;background-position:center center; background-color:#fff;}
 .estorm-zoom .arrow-prev {background-image:url(../images/commont/guan.jpg);top:0;}
 .estorm-zoom .arrow-next {background-image:url(../images/commont/kai.jpg); bottom:0}
@@ -29,7 +30,7 @@
 
         .product-shop{
             position:relative;
-            padding-left: 450px;
+            padding-left: 520px;
             padding-bottom:20px;
             float: none;
             width: auto;
