--- a/skin/frontend/pc/default/scss/_header.scss
+++ b/skin/frontend/pc/default/scss/_header.scss
@@ -17,8 +17,14 @@
       float:left;
       color:#fff;
 
+      &>span{
+        background-repeat:no-repeat;
+        padding-left:20px;
+        background-position:left center;
+      }
+
       .currency_list{
-        width:50px;
+        width:70px;
         text-align: center;
         position: absolute;
         top:$top_height;
@@ -29,6 +35,12 @@
         background:#fff;
         display: none;
         z-index:1000;
+
+        a{
+          background-repeat:no-repeat;
+          padding-left:20px;
+          background-position:left center;
+        }
       }
 
       &:hover {
